[gd_scene load_steps=7 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://addons/midi/MidiPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://RandomPlayer.gd" type="Script" id=4]
[ext_resource path="res://dialog_theme.tres" type="Theme" id=5]
[ext_resource path="res://resources/prog.png" type="Texture" id=6]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="HappyKettle" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_right = 276.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Controls"]
show_behind_parent = true
margin_right = 276.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Menu" type="VBoxContainer" parent="Controls"]
margin_right = 276.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="Controls/Menu"]
margin_right = 276.0
margin_bottom = 72.0
columns = 2

[node name="Tracks" type="SpinBox" parent="Controls/Menu/GridContainer2"]
margin_right = 136.0
margin_bottom = 20.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 16.0
value = 16.0
suffix = "tracks"

[node name="Style" type="OptionButton" parent="Controls/Menu/GridContainer2"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Style"

[node name="Mode" type="OptionButton" parent="Controls/Menu/GridContainer2"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Mode"

[node name="Key" type="OptionButton" parent="Controls/Menu/GridContainer2"]
margin_left = 140.0
margin_top = 24.0
margin_right = 276.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "C"
items = [ "F", null, false, 0, null, "F#", null, false, 1, null, "G", null, false, 2, null, "G#", null, false, 3, null, "A", null, false, 4, null, "A#", null, false, 5, null, "B", null, false, 6, null, "C", null, false, 7, null, "C#", null, false, 8, null, "D", null, false, 9, null, "D#", null, false, 10, null, "E", null, false, 11, null ]
selected = 7

[node name="Label5" type="Label" parent="Controls/Menu/GridContainer2"]
margin_top = 48.0
margin_right = 136.0
margin_bottom = 58.0
text = "Random seed"

[node name="Seed" type="LineEdit" parent="Controls/Menu/GridContainer2"]
margin_left = 140.0
margin_top = 48.0
margin_right = 276.0
margin_bottom = 58.0
size_flags_horizontal = 3
placeholder_text = "seed"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="Controls/Menu/GridContainer2"]
margin_top = 62.0
margin_right = 136.0
margin_bottom = 72.0
text = "Intricacy"

[node name="Intricacy" type="SpinBox" parent="Controls/Menu/GridContainer2"]
margin_left = 140.0
margin_top = 62.0
margin_right = 276.0
margin_bottom = 72.0
size_flags_horizontal = 3
max_value = 4.0
value = 2.0
rounded = true

[node name="GridContainer3" type="VBoxContainer" parent="Controls/Menu"]
margin_top = 76.0
margin_right = 276.0
margin_bottom = 174.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/Menu/GridContainer3"]
margin_right = 276.0
margin_bottom = 10.0

[node name="Label" type="Label" parent="Controls/Menu/GridContainer3/HBoxContainer"]
margin_right = 136.0
margin_bottom = 10.0
size_flags_horizontal = 3
text = "Density"

[node name="Density2" type="SpinBox" parent="Controls/Menu/GridContainer3/HBoxContainer"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 10.0
size_flags_horizontal = 3
value = 50.0
rounded = true
suffix = "%"

[node name="Density" type="HSlider" parent="Controls/Menu/GridContainer3"]
margin_top = 14.0
margin_right = 276.0
margin_bottom = 30.0
size_flags_horizontal = 3
value = 50.0
rounded = true
tick_count = 9
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls/Menu/GridContainer3"]
margin_top = 34.0
margin_right = 276.0
margin_bottom = 44.0

[node name="Label3" type="Label" parent="Controls/Menu/GridContainer3/HBoxContainer2"]
margin_right = 136.0
margin_bottom = 10.0
size_flags_horizontal = 3
text = "Tempo"

[node name="Tempo2" type="SpinBox" parent="Controls/Menu/GridContainer3/HBoxContainer2"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 10.0
size_flags_horizontal = 3
min_value = 60.0
max_value = 210.0
value = 130.0
suffix = "bpm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo" type="HSlider" parent="Controls/Menu/GridContainer3"]
margin_top = 48.0
margin_right = 276.0
margin_bottom = 64.0
size_flags_horizontal = 3
min_value = 60.0
max_value = 210.0
value = 130.0
tick_count = 16
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Controls/Menu/GridContainer3"]
margin_top = 68.0
margin_right = 276.0
margin_bottom = 78.0

[node name="Label4" type="Label" parent="Controls/Menu/GridContainer3/HBoxContainer3"]
margin_right = 136.0
margin_bottom = 10.0
size_flags_horizontal = 3
text = "Target length"

[node name="Length2" type="SpinBox" parent="Controls/Menu/GridContainer3/HBoxContainer3"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 10.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1024.0
value = 1.0
suffix = "bars"

[node name="Length" type="HSlider" parent="Controls/Menu/GridContainer3"]
margin_top = 82.0
margin_right = 276.0
margin_bottom = 98.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1024.0
value = 512.0
tick_count = 17
ticks_on_borders = true

[node name="OpenSoundfont" type="Button" parent="Controls/Menu"]
margin_top = 178.0
margin_right = 276.0
margin_bottom = 188.0
text = "Soundfont"

[node name="Play" type="Button" parent="Controls/Menu"]
margin_top = 192.0
margin_right = 276.0
margin_bottom = 202.0
size_flags_horizontal = 3
toggle_mode = true
text = "Play!"

[node name="SoundfontDialog" type="FileDialog" parent="."]
margin_right = 640.0
margin_bottom = 320.0
theme = ExtResource( 5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.sf2; Soundfont 2" )
current_dir = "/usr/share/sounds/sf2"
current_path = "/usr/share/sounds/sf2/"

[node name="RandomPlayer" type="Node" parent="."]
script = ExtResource( 4 )
soundfont = "res://resources/default-GM.sf2"

[node name="MidiPlayer" parent="RandomPlayer" instance=ExtResource( 3 )]

[connection signal="pressed" from="Controls/Menu/OpenSoundfont" to="." method="_on_OpenSoundfont_pressed"]
[connection signal="toggled" from="Controls/Menu/Play" to="." method="_on_Play_toggled"]
[connection signal="file_selected" from="SoundfontDialog" to="." method="_on_SoundfontDialog_file_selected"]
[connection signal="finished" from="RandomPlayer" to="." method="_on_RandomPlayer_finished"]
[connection signal="changed_tempo" from="RandomPlayer/MidiPlayer" to="." method="_on_MidiPlayer_changed_tempo"]
[connection signal="finished" from="RandomPlayer/MidiPlayer" to="RandomPlayer" method="_on_MidiPlayer_finished"]
